Onboarding v3 update